# kg_constructor

./: .gitignore  0.pkl  CLEANUP_SUMMARY.md  DUAL_PROMPT_SYSTEM.md  Dockerfile  EARLY_STOPPING_GUIDE.md  ENTITY_VISUALIZATION_SUMMARY.md  FINAL_CLEANUP_SUMMARY.md  ITERATIVE_EXTRACTION_DEFAULT.md  ITERATIVE_EXTRACTION_PROMPTS.md  Makefile  README.md  README_LANGEXTRACT.md  README_UNIFIED_EXTRACTION.md  RELATION_VISUALIZATION_UPDATE.md  TEST_SCRIPT_GUIDE.md  VISUALIZATION_COMPARISON.txt  VISUALIZATION_GUIDE.md  debug.py  debug_ollama_init.py  extraction_log.txt  extraction_log_v2.txt  extraction_log_v3.txt  ollama_extraction_log.txt  pyproject.toml  requirements.txt  setup_api_key.sh  test_augmentation_only_lmstudio.sh  test_augmentation_only_ollama.sh  test_connectivity_comparison.sh  test_langextract_features.sh  test_ollama_direct.py  test_single_extraction.sh  test_single_extraction_lmstudio.sh  test_single_extraction_ollama.sh
.claude/: settings.local.json
.claude/skills/: add-augmentation-strategy.md  add-converter.md  add-dataset-format.md  add-domain.md  (+2 more)
docs/: LANGEXTRACT_USAGE.md  UNIFIED_EXTRACTION_GUIDE.md
examples/: langextract_example.py  unified_extraction_examples.py
kg_constructor/: __init__.py  __main__.py
kgb/: __init__.py  __main__.py
reports/: triple_quality_evaluation_gemma3.md
scripts/: clean_ocr.py  run_pipeline.sh  test_single_extraction.sh  test_single_extraction_gemini.sh  test_single_extraction_lmstudio.sh  test_single_extraction_ollama.sh
src/: __init__.py  __main__.py  extract_cli.py  extraction_pipeline.py  extractor.py
(+147 files in other folders)
