[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kgb"
version = "0.1.0"
description = "KGB - Knowledge Graph Builder: Extract, augment, convert, and visualize knowledge graphs from text"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.19.0,<4.0.0",
    "requests>=2.31.0",
    "typer>=0.9.0",
    "tqdm>=4.66.0",
    "networkx>=3.2",
    "langextract>=1.1.0",
    "langextract[openai]",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["black>=23.12"]

[project.scripts]
kgb = "kgb.__main__:main_entry"

[tool.setuptools.packages.find]
include = ["kgb*"]

[tool.setuptools.package-data]
"kgb.clients" = ["configs/*.json"]
"kgb.pipeline" = ["configs/*.yaml"]
